--- a/package.json
+++ b/package.json
@@ -13,7 +13,26 @@
     "*"
   ],
   "main": "./out/extension/extension.js",
-  "contributes": {},
+  "contributes": {
+    "views": {
+      "results": [
+        {
+          "type": "webview",
+          "id": "results",
+          "name": "Results"
+        }
+      ]
+    },
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "results",
+          "title": "Results",
+          "icon": ""
+        }
+      ]
+    }
+  },
   "scripts": {
     "vscode:prepublish": "yarn run compile",
     "compile": "tsc -p ./src/extension",
@@ -52,7 +71,6 @@
     "prettier-plugin-svelte": "^2.4.0",
     "rollup": "^2.56.3",
     "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "simple-git-hooks": "^2.6.1",
@@ -105,11 +123,11 @@
     "svelteSortOrder": "options-scripts-markup-styles",
     "svelteBracketNewLine": true
   },
-  "simple-git-hooks": {
-    "pre-commit": "lint-staged"
-  },
   "lint-staged": {
     "*.{js,ts}": "eslint --fix",
     "*.{js,ts,svelte}": "prettier --write"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
   }
 }
