--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "svelte.plugin.css.diagnostics.enable": false
+  "svelte.plugin.css.diagnostics.enable": false,
+  "svelte.plugin.svelte.compilerWarnings": {
+    "a11y-missing-attribute": "ignore",
+    "a11y-missing-content": "ignore"
+  }
 }
