--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@rollup/plugin-typescript": "^8.2.5",
     "@tsconfig/svelte": "^2.0.1",
@@ -105,7 +106,8 @@
       "sourceType": "module"
     },
     "globals": {
-      "vscode": "readonly"
+      "vscode": "readonly",
+      "mediaPath": "readonly"
     }
   },
   "eslintIgnore": [
