--- a/src/results/tsconfig.json
+++ b/src/results/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
-  "include": ["./**/*", "../../vscode.d.ts"],
-  "exclude": ["node_modules/*"]
+  "include": ["./**/*.ts"],
+  "exclude": ["node_modules/*"],
+  "compilerOptions": {
+    "resolveJsonModule": true,
+  }
 }
