#17: Add icon to activity bar

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         {
           "id": "results",
           "title": "Results",
-          "icon": ""
+          "icon": "/media/extension-icon.svg"
         }
       ]
     }
