--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "pre-commit": "npx lint-staged"
   },
   "dependencies": {
-    "@vscode/webview-ui-toolkit": "^0.8.3"
+    "@vscode/webview-ui-toolkit": "^0.8.3",
+    "nanoid": "^3.1.30"
   }
 }
