--- a/src/extension/tsconfig.json
+++ b/src/extension/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "commonjs",
     "target": "es6",
     "outDir": "../../out/extension",
-    "lib": ["es6"],
+    "lib": ["es6", "dom"],
     "sourceMap": true,
     "strict": true,
     "skipLibCheck": false,
