--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@rollup/plugin-typescript": "^8.2.5",
     "@tsconfig/svelte": "^2.0.1",
     "@types/glob": "^7.1.3",
+    "@types/lodash.uniqby": "^4.7.6",
     "@types/mocha": "^8.2.2",
     "@types/node": "14.x",
     "@types/vscode": "^1.60.0",
@@ -152,6 +153,8 @@
   },
   "dependencies": {
     "@vscode/webview-ui-toolkit": "^0.8.3",
+    "axios": "^0.24.0",
+    "lodash.uniqby": "^4.7.0",
     "nanoid": "^3.1.30"
   }
 }
