--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "Testing"
   ],
   "activationEvents": [
-    "*"
+    "onStartupFinished"
   ],
   "main": "./out/extension/extension.js",
   "contributes": {
