--- a/package.json
+++ b/package.json
@@ -98,6 +98,13 @@
     "dev:svelte": "rollup -c -w",
     "typecheck:svelte": "svelte-check --tsconfig ./src/results/tsconfig.json"
   },
+  "dependencies": {
+    "@vscode/codicons": "^0.0.26",
+    "@vscode/webview-ui-toolkit": "^0.8.4",
+    "axios": "^0.24.0",
+    "lodash.uniqby": "^4.7.0",
+    "nanoid": "^3.1.30"
+  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -124,6 +131,7 @@
     "lint-staged": "^11.1.2",
     "mocha": "^8.4.0",
     "postcss": "^8.3.6",
+    "postcss-html": "^1.3.0",
     "postcss-nested": "^5.0.6",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
@@ -132,6 +140,12 @@
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "simple-git-hooks": "^2.6.1",
+    "stylelint": "^14.1.0",
+    "stylelint-config-html": "^1.0.0",
+    "stylelint-config-idiomatic-order": "^8.1.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-prettier": "^2.0.0",
     "svelte": "^3.42.6",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.9.4",
@@ -187,18 +201,31 @@
     "svelteSortOrder": "options-scripts-markup-styles",
     "svelteBracketNewLine": true
   },
+  "stylelint": {
+    "extends": [
+      "stylelint-config-html/svelte",
+      "stylelint-prettier/recommended",
+      "stylelint-config-idiomatic-order",
+      "stylelint-config-standard"
+    ],
+    "rules": {
+      "custom-property-empty-line-before": "never",
+      "selector-pseudo-class-no-unknown": [
+        true,
+        {
+          "ignorePseudoClasses": [
+            "global"
+          ]
+        }
+      ]
+    }
+  },
   "lint-staged": {
     "*.{js,ts}": "eslint --fix",
-    "*.{js,ts,svelte}": "prettier --write"
+    "*.{js,ts,svelte}": "prettier --write",
+    "*.svelte": "stylelint --ip *.md src/**/*.svelte --fix"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
-  },
-  "dependencies": {
-    "@vscode/codicons": "^0.0.26",
-    "@vscode/webview-ui-toolkit": "^0.8.4",
-    "axios": "^0.24.0",
-    "lodash.uniqby": "^4.7.0",
-    "nanoid": "^3.1.30"
   }
 }
