--- a/package.json
+++ b/package.json
@@ -210,6 +210,7 @@
     ],
     "rules": {
       "custom-property-empty-line-before": "never",
+      "declaration-colon-newline-after": null,
       "selector-pseudo-class-no-unknown": [
         true,
         {
