--- a/.vscodeignore
+++ b/.vscodeignore
@@ -4,9 +4,14 @@ out/test/**
 
 src/**
 .gitignore
+.editorconfig
 .yarnrc
 vsc-extension-quickstart.md
 **/tsconfig.json
 **/.eslintrc.json
 **/*.map
 **/*.ts
+assets/**
+DOCS.md
+rollup.config.js
+svelte.config.js
