--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "displayName": "Certora IDE",
   "description": "Check and validate smart contracts in VS Code.",
   "publisher": "Certora",
-  "version": "0.0.1-beta.5",
+  "version": "0.0.1-beta.6",
+  "license": "SEE LICENSE IN LICENSE",
   "repository": {
     "type": "git",
     "url": "https://github.com/Certora/vscode-certora-prover"
