fix image version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/node:latest
+      - image: cimg/node:17.4.0
 
     working_directory: ~/repo
 
