--- a/src/extension/tsconfig.json
+++ b/src/extension/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
-    "outDir": "../../out/extension",
+    "outDir": "../../out/",
     "lib": ["es6", "dom"],
     "sourceMap": true,
     "strict": true,
