order was added to solidityPackageDirectories

--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
           "description": "For each package, gets the path to a directory including that Solidity package.\n\nWhen to use it?\nBy default we look for the packages in default directory. Set here if there are packages are in several different directory",
           "type": "object",
           "additionalProperties": "string",
-          "properties": {}
+          "properties": {},
+          "order": 2
         }
       }
     },
