--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
         "SolcExecutable": {
           "type": "string",
           "default": "solc",
-          "pattern": "^[a-z0-9.]{0,20}$",
-          "patternErrorMessage": "Input must by a valid solc executable name",
+          "pattern": "^[A-Za-z0-9.]{0,20}$",
+          "patternErrorMessage": "Input must be a valid solc executable name",
           "description": "Executable to use",
           "order": 1
         }
@@ -49,7 +49,7 @@
         "SolidityArguments": {
           "markdownDescription": "A list of arguments to pass to the Solidity compiler.\nThe arguments will be passed as is, without any formatting, in the same order.\n\n**Example:**\n\n```js\n['--optimize', '--optimize-runs', '200']\n```",
           "type": "string",
-          "pattern": "^(\\[(\\'[0-9a-z\\-]+\\',(\\s?))*((\\'[0-9a-z\\-]+\\')*)\\])*$",
+          "pattern": "^(\\[(\\'.+\\',(\\s?))*((\\'.+\\')*)\\])*$",
           "patternErrorMessage": "Input must be an array of string commands",
           "order": 0
         },
